# nyc-taxi-irregular-croppers

./: .gitignore  README.md  profiles.yml.example  pyproject.toml
.github/workflows/: README.md  ci.yml  docs.yml  pipeline.yml  release.yml
dbt_nyc_taxi/: README.md  dbt_project.yml
dbt_nyc_taxi/ci/: profiles.yml
dbt_nyc_taxi/macros/: generate_schema_name.sql
dbt_nyc_taxi/models/marts/: _marts_models.yml  daily_summary.sql  hourly_patterns.sql  zone_analysis.sql
dbt_nyc_taxi/models/staging/: _sources.yml  stg_yellow_taxi_trips.sql  stg_yellow_taxi_trips_duckdb.sql  stg_yellow_taxi_trips_schema.yml
dbt_nyc_taxi/seeds/: _seeds.yml
docs/: architecture-cible.md  brief.md  demo-frontend.md  exploration-donnees.md  guide-dbt-equipe.md  guide-github-projects.md  kickoff-equipe.md  modifications_script_telechargement.md  monitoring-snowflake.md  onboarding.md  plan-zone-lookup-seed.md  proposition-hybride-duckdb.md  rapport-analyse.md  transformations-dbt.md  workflow-equipe.md
scripts/: README.md  download_data.py  eda_duckdb.py  explore_data.py  ingest.sh
snowflake/: 01_setup_infra.sql  02_monitoring.sql  seed_dev_sample.sql
