[project]
name = "nyc-taxi-irregular-croppers"
version = "0.1.0"
description = "Pipeline data NYC Yellow Taxi (équipe Irregular Croppers) — Snowflake + dbt + GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11",
    "dbt-snowflake>=1.11",
    "polars>=1.41",
    "pyarrow>=24",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.uv]
# Toujours utiliser un Python téléchargé par uv (python-build-standalone),
# jamais un pyenv/conda local potentiellement compilé sans _bz2 / _lzma / _sqlite3.
# Garantit le même interpréteur complet pour toute l'équipe.
python-preference = "only-managed"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle (E), pyflakes (F), tri des imports (I)
